--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ limitations under the License.
       <div id="description-title">Spoof Detection</div>
       <p>This demo shows the model detecting faces in a live camera feed. The model aims to detect whether
         or not a face shown in the camera is spoof.
+        The project is available on this <a href="https://github.com/abrosua/tfjs-spoof-detection">repository</a>.
       </p>
     </div>
     <video id="video" playsinline style="
